# moncpipelib

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/: best-practices.md  cookbook.md  data-contracts-spec.md  lineage-tracking.md  openlineage-integration-spec.md  scd2-guide.md  security.md  uuid_handling.md
docs/migrations/: 2026-07-22-automated-releases.md
docs/whats-new-summaries/: v0.32.0.md  v0.7.0-to-v0.11.3.md
scripts/: bench_reconcile_work_mem.py  bench_upsert_staging_merge.py  generate_cookbook.py
src/moncpipelib/: __init__.py  config.py  historical.py  jobs.py  reference.py  rendering.py  sensors.py  streaming.py  tags.py  versioning.py
tests/: __init__.py  conftest.py  test_analyze_after_write.py  test_app_name.py  test_blob_mirror_streaming_memory.py  test_blob_resource.py  test_calendar_release_resolver.py  test_config.py  test_contract_corpus.py  test_contracts_hashing.py  test_diagnostics.py  test_foreign_blob_source.py  test_historical.py  test_ingest_api_crawl.py  test_ingest_api_resolver.py  test_ingest_blob_mirror.py  test_ingest_blob_mirror_contract.py  test_ingest_contract_loader.py  test_ingest_crawl_plans_registry.py  test_ingest_dispatcher.py  test_ingest_drain.py  test_ingest_extract.py  test_ingest_filenames.py  test_ingest_hashing.py  test_ingest_http.py  test_ingest_http_urls.py  test_ingest_manifest.py  test_ingest_match_validation.py  test_ingest_partition_reader.py  test_ingest_prefix.py  test_ingest_resolver.py  test_ingest_resolver_multifile.py  test_ingest_resolvers_registry.py  test_ingest_sensors.py  test_ingest_streaming_memory.py  test_ingest_throttle.py  test_jobs.py  test_keyvault_resource.py  test_lineage_models.py  test_lineage_tracker.py  (+23 more)
tests/cookbook/: conftest.py  test_api_crawl_cookbook.py  test_api_resolver_cookbook.py  test_asset_naming_cookbook.py  test_blob_ingest_cookbook.py  test_calendar_resolver_cookbook.py  test_contract_checks_cookbook.py  test_contract_column_tests_cookbook.py  test_contract_parameters_cookbook.py  test_diagnostics_cookbook.py  test_from_ingest_period_registry_cookbook.py  test_lineage_cookbook.py  test_non_archive_payload_cookbook.py  test_openlineage_cookbook.py  test_partition_aware_cookbook.py  test_partition_reader_cookbook.py  test_pii_cookbook.py  test_pii_metadata_cookbook.py  test_query_data_lineage_metadata.py  test_reference_silver_cookbook.py  test_resource_write_cookbook.py  test_scd2_changes_cookbook.py  test_scd2_lifecycle_cookbook.py  test_scd2_reconcile_multi_contract_cookbook.py  test_scd2_sequence_cookbook.py  test_source_resolution.py  test_tags_cookbook.py  test_testing_utils_cookbook.py  test_text_normalizer_cookbook.py  test_transforms_cookbook.py  test_universal_io_manager_cookbook.py  test_versioning_cookbook.py  test_write_modes_cookbook.py
tests/integration/: conftest.py  test_analyze_after_write.py  test_batched_output.py  test_blob_resource.py  test_contract_enforcement.py  test_diagnostics_sampler.py  test_driver_seam_smoke.py  test_empty_read_schema.py  test_json_polars.py  test_lineage_atomicity.py  test_lineage_parents.py  test_lineage_replaces.py  test_load_input.py  test_partition_aware.py  test_period_registry.py  test_reference.py  test_scd2_handle_output.py  test_scd2_integration.py  test_scd2_presence_only.py  test_skip_lineage_writes.py  test_staging_generated_columns.py  test_upsert_staging_merge.py  test_uuid_polars.py  test_write_append.py  test_write_full_refresh.py  test_write_upsert.py  test_write_upsert_characterization.py  test_write_upsert_skip_unchanged.py
tests/test_contracts/: __init__.py  test_checks.py  test_checks_types.py  test_loader.py  (+4 more)
(+87 files in other folders)
