[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moncpipelib"
version = "0.45.0"
description = "Shared utilities for Model Oncology data pipelines"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Model Oncology", email = "engineering@modeloncology.com" },
]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "azure-identity>=1.19",
    "azure-keyvault-secrets>=4.10",
    "azure-storage-blob>=12.23",
    "dagster>=1.12.20",
    "httpx>=0.28",
    "ijson>=3.2,<4",
    "polars>=1.39.3",
    "psycopg[binary]>=3.1",
    "pyarrow>=17.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.48",
    "sqlglot>=29.0.1",
]

[project.optional-dependencies]
openlineage = [
    "openlineage-python>=1.45.0",
]
integration = [
    "testcontainers[azurite,postgres]>=4.14.2",
]
dev = [
    "freezegun>=1.5.0",
    "mypy>=1.19.1",
    "openlineage-python>=1.45.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "respx>=0.22.0",
    "ruff>=0.15.7",
    "types-pyyaml>=6.0.12.20250915",
]

[project.urls]
Homepage = "https://github.com/model-oncology-public/moncpipelib"
Repository = "https://github.com/model-oncology-public/moncpipelib"

[tool.hatch.build.targets.wheel]
packages = ["src/moncpipelib"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["moncpipelib"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests"]
# Dagster's ConfigurableResource/ConfigurableIOManager don't require type parameters
disallow_any_generics = false

[[tool.mypy.overrides]]
# ijson ships no type stubs (no types-ijson package on PyPI as of 2026-04).
# The library's public API is small (parse, items, JSONError) and we use
# only the streaming-parse surface; loss of type information is bounded.
module = "ijson"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pyarrow ships no py.typed marker / stubs (pyarrow-stubs is third-party
# and incomplete). We use only the parquet batched-read surface
# (ParquetFile.iter_batches) in streaming.py; loss of type information is
# bounded and the polars boundary is fully typed.
module = "pyarrow.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q -m 'not integration'"
markers = [
    "integration: requires Docker (PostgreSQL and/or Azurite container; deselect with '-m \"not integration\"')",
    "cookbook: test doubles as a documentation example (title, description, category)",
    "slow: long-running acceptance test (large synthetic payloads / memory profiling); runs by default, deselect with '-m \"not slow\"' for hot iteration",
]

[tool.coverage.run]
source = ["src/moncpipelib"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]